NEBV-986 render confidentiality in detail breakdown

--- a/app/components/DetailBreakDown.scss
+++ b/app/components/DetailBreakDown.scss
@@ -17,3 +17,10 @@
     color: #666;
   }
 }
+
+.confidentialIcon {
+  position: absolute;
+  margin-top: -15px;
+  margin-left: 15px;
+  z-index: 99999;
+}
