NEBV-986 Connected detail breakdown confidentiality to data

--- a/app/components/DetailBreakDown.scss
+++ b/app/components/DetailBreakDown.scss
@@ -20,7 +20,9 @@
 
 .confidentialIcon {
   position: absolute;
-  margin-top: -15px;
+  margin-top: -38px;
   margin-left: 15px;
   z-index: 99999;
+  width: 12px;
+  height: 12px;
 }
