added spacing and adjusted location for the div

--- a/app/styles/Common.scss
+++ b/app/styles/Common.scss
@@ -158,3 +158,6 @@ td, th { padding: 0; }
   border-width: 6px 6px 6px 0;
   border-color: transparent #666 transparent transparent;
 }
+.confidentialSpacing {
+  padding-top:4px;
+}
