--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -318,8 +318,9 @@
 }
 .confidentialityText {
   font-family:$fira-sans-condensed;
-  font-size: 10.5px;
+  font-size: 11.5px;
   color: #999;
+  text-align: center;
 }
 .portLabel{
   font-family: $fira-sans-condensed;
