move the arrow and text

--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -259,6 +259,7 @@
   color: #666;
   font-family: $fira-sans-condensed-semibold;
   margin-top: -20px;
+  margin-left: 10px;
 }
 
 #detailSidebar {
