NEBV-1067 Remove old unsized content logic from vis selector

--- a/app/components/Menu.scss
+++ b/app/components/Menu.scss
@@ -13,4 +13,10 @@
   .menuOption, .uppercase {
     text-transform: uppercase;
   }
+
+  .menuOption .prefix {
+    text-transform: none;
+    font-family: "FiraSansCondensed", sans-serif;
+    fill: #999;
+  }
 }
