--- a/app/styles/Common.scss
+++ b/app/styles/Common.scss
@@ -24,6 +24,10 @@
   30% { opacity: 1; }
 }
 
+#reactRoot { 
+  line-height: normal;
+}
+
 .containerOne {
   position: absolute;
   top: -webkit-calc(50% - .45em);
