fix(common styles): attatches line height reset to reactRoot

--- a/app/styles/Common.scss
+++ b/app/styles/Common.scss
@@ -24,6 +24,11 @@
   30% { opacity: 1; }
 }
 
+// reset the line height in the new CER template
+#reactRoot {
+	line-height: normal;
+}
+
 .containerOne {
   position: absolute;
   top: -webkit-calc(50% - .45em);
@@ -31,8 +36,6 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
-    // reset the line height in the new CER template
-  line-height: normal;
 }
 
 .containerTwo {
@@ -41,8 +44,6 @@
   top: calc(50% - .45em);
   left: calc(50% - .45em);
   left: -webkit-calc(50% - .45em);
-    // reset the line height in the new CER template
-  line-height: normal;
 }
 
 .titleContainer {
