fix(About): apllies various small fixes to the about page

--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -190,8 +190,7 @@
   font-family: $fira-sans-condensed;
   font-size: 16px;
   color: $neutral-medium-dark;
-  margin-left: 25px;
-  margin-top: 25px;
+  margin:25px 0px 18px 25px;
 }
 
 .aboutSubheading {
@@ -199,6 +198,7 @@
   font-size: 13px;
   fill: $neutral-medium-dark;
   margin-left: 25px;
+  margin-bottom: 18px;
 }
 
 .socialBarText {
